--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ th{
 button{
     width: 100%;
 }
+
+button[title $= "password text"]{
+    width: auto;
+}
+
 .main .block-container {
     max-width: 80%;
     padding-top: 1rem;
